# aegis

./: .env.example  .git_commit_msg.tmp  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  COMPLIANCE.md  CORPUS_FINDINGS.md  Makefile  README.md  REWRITE_PLAN.md  RUNBOOK.md  dev.ps1  install-cloudflare-tunnel.ps1  pyproject.toml  upload-statements.ps1
.claude/: settings.json
.githooks/: pre-commit
deploy/: CRED_ROTATION_2026-05.md  RECOVERY.md  RUNBOOK.md  aegis-backup.service  aegis-backup.timer  aegis-funder-sync.service  aegis-funder-sync.timer  aegis-heartbeat-web.service  aegis-heartbeat-web.timer  aegis-heartbeat-worker.service  aegis-heartbeat-worker.timer  aegis-ofac-update.service  aegis-ofac-update.timer  aegis-queue-monitor.service  aegis-queue-monitor.timer  aegis-sos-update.service  aegis-sos-update.timer  aegis-web.service  aegis-worker.service  aegis.env.example  cloudflared-config.yml.example  iam-policy.json  install.sh  journald-retention.conf  logrotate.aegis
docs/: AEGIS_COMPLETE_BUILD_PLAN.md  AEGIS_MASTER_PLAN.md  AUDIT_2026_05_10.md  CLOSE_AUTOMATION_SPEC.md  CLOUDFLARE_ACCESS_POLICY.md  FLAG_GLOSSARY.md  FRAUD_SIGNAL_CATALOG.md  PDF_KEY_ROTATION.md  PDF_RETENTION_DESIGN.md  REMAINING_WORK.md  SCORING_REDESIGN_CONTINUATION.md  STEP_2_CUTOVER_REVIEW.md  WORKER_QUICKSTART.md  audit-confirmed-bugs.md  horizontal_scale_readiness.md  real_corpus_expansion_spec.md  repo_hygiene_2026-06-12.md  track_a_audit_2026-06-12.md  worktree_isolation_diagnostic.md
migrations/: 000_foundation.sql  001_pgcrypto_and_transactions.sql  002_analyses_source_ids.sql  003_funders_table.sql  004_disclosure_transmission_log.sql  005_funders_requires_coj.sql  006_funders_aegis_compensation_disclosure.sql  007_funders_charges_merchant_advance_fees.sql  008_merchants_intake_fields.sql  009_analyses_monthly_breakdown.sql  010_add_zoho_lead_id.sql  011_enable_rls.sql  012_deals_view.sql  013_submissions_table.sql  014_analyses_bank_identity.sql  015_decisions.sql  016_disclosures.sql  017_overrides.sql  018_compliance_obligations.sql  019_audit_log_extend.sql  020_processor_statements.sql  021_funder_replies.sql  022_operators_and_roles.sql  024_audit_log_archive.sql  025_audit_retention_policy.sql  026_close_lead_id.sql  027_funders_contact_and_tiers.sql  028_funders_notes_residual.sql  029_funders_operator_notes.sql  030_security_advisor_fixes.sql  031_seed_operators.sql  032_analyses_pattern_analysis.sql  033_documents_storage_and_retention.sql  034_merchants_provisional.sql  035_seed_funders_production.sql  036_disclosure_transmissions.sql  037_scoring_shadow_disagreements.sql  038_scoring_disagreements_open_view.sql  039_merchants_maturity_date.sql  040_funder_renewal_attestations.sql  (+65 more)
scripts/: __init__.py  _debug_doc.py  _e2e_kyc_test.py  _kyc_b_zoho_push.py  _reparse_one.py  _reparse_wipe.py  _seed_real_funders.py  _seed_zoho_lenders.py  _status_probe.py  _test_real_funders_match.py  _verify_leg_runner.sh  _wipe_uniqueness_failures.py  add_funder.py  apply_migrations.py  audit_funders_table.py  backfill_corpus_bank_detection.py  backfill_counterparty_classifications.py  backfill_decisions.py  backup_supabase.py  build_real_corpus.py  build_sos_database.py  bulk_import_close_leads.py  canary_upload.ps1  cf_provision_tunnel.sh  cf_setup_hostname.sh  cf_swap_box_tunnel.sh  check_vu7722_status.py  cohort_backtest.py  compare_corpus_runs.py  cutover_check.py  db_verify.py  demo_h2_to_h8_on_vu.py  deploy.ps1  deploy.sh  dev.py  dev_seed_dashboard.py  generate_corpus.py  generate_image_only_corpus.py  generate_processor_corpus.py  health_check.py  (+39 more)
tests/: _fixture_sanitize.py  conftest.py  test_anti_drift.py  test_api_boot_guards.py  test_api_documents_view.py  test_apply_migrations.py  test_audit.py  test_audit_archiver.py  test_audit_route.py  test_backfill_decisions.py  test_backup_supabase.py  test_close_client.py  test_close_field_map.py  test_close_offer_sync.py  test_close_queue.py  test_close_sync.py  test_close_sync_credit_score_task.py  test_compare_corpus_runs.py  test_compliance_obligations.py  test_compliance_router.py  test_config_close.py  test_config_zoho_residue.py  test_corpus.py  test_crypto.py  test_dashboard.py  test_db_verify.py  test_findings_export.py  test_fixture_pii_canary.py  test_funder_replies.py  test_funder_replies_route.py  test_funder_reply_outcome.py  (+35 more)
(+1022 files in other folders)
