[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aegis"]

[project]
name = "aegis"
version = "2.0.0"
description = "MCA underwriting brain for Commera Capital (Python rewrite)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "supabase>=2.9",
    "anthropic[bedrock]>=0.39",
    "boto3>=1.35",
    "pikepdf>=9.0",
    "pymupdf>=1.24",
    "reportlab>=4.2",
    "weasyprint>=60",
    "scipy>=1.14",
    "jinja2>=3.1",
    "arq>=0.26",
    "redis>=5.2",
    "python-dotenv>=1.0",
    "tenacity>=9.0",
    "python-multipart>=0.0.12",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "mypy>=1.13",
    "ruff>=0.7",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-snapshot>=0.9",
    "hypothesis>=6.115",
    "types-redis",
    "types-PyYAML",
    "boto3-stubs[bedrock-runtime]",
    "pytest-cov>=5.0",
    # Operator tooling (scripts/apply_migrations.py, scripts/db_verify.py).
    # Not used by the running app — the prod aegis-web + aegis-worker units
    # use the supabase-py REST client. psycopg is operator/dev-side only.
    "psycopg[binary]>=3.2",
]

[tool.mypy]
strict = true
python_version = "3.12"
plugins = ["pydantic.mypy"]
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["reportlab.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["fitz", "pymupdf", "weasyprint"]
ignore_missing_imports = true

# pymupdf ships partial stubs: classes like Document and its methods are
# typed as untyped functions in the stubs. Test modules that build small
# image-only fixtures via pymupdf, or that crack open generated PDFs to
# verify content, don't benefit from the strict no-untyped-call
# enforcement.
[[tool.mypy.overrides]]
module = [
    "tests.parser.test_text_layer_detection",
    "tests.parser.test_extract_vision",
    "tests.parser.test_page_router",
    "tests.parser.test_extract_per_page",
    "tests.parser.test_pipeline_page_routing",
    "tests.parser.test_processor_detect",
    "tests.web.test_dossier_pdf",
]
disable_error_code = ["no-untyped-call"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "S", "ANN", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ANN"]
# scripts/* are operator scripts, not production code:
#   S311 — random.Random is fine for synthetic-corpus determinism.
#   S101 — assert is fine for operator-side sanity checks.
"scripts/**" = ["S311", "S101"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
